# celler

./: Cargo.toml  README.md  ci-installer.nix  crane.nix  default.nix  flake.nix  justfile
.ci/: build-and-push-images.sh
.github/: dependabot.yml
.github/workflows/: book.yml  build.yml  lint.yml
attic/: Cargo.toml  build.rs
attic/benches/: chunking.rs
attic/src/: cache.rs  error.rs  lib.rs
attic/src/api/: binary_cache.rs
attic/src/api/v1/: upload_path.rs
attic/src/hash/: mod.rs
attic/src/hash/tests/: mod.rs
attic/src/io/: hash_reader.rs
attic/src/nix_store/: README.md  mod.rs  nix_store.rs
attic/src/nix_store/bindings/: nix-includes.hpp  nix.cpp  nix.hpp
attic/src/nix_store/tests/: mod.rs  test_nar.rs
attic/src/signing/: mod.rs
book/: book.toml  colorized-help.nix  default.nix
book/src/: SUMMARY.md  faqs.md  introduction.md  tutorial.md
book/src/admin-guide/: README.md  attic-migration.md  chunking.md
book/src/reference/: README.md  celler-cli.md  celleradm-cli.md  cellerd-cli.md
book/src/user-guide/: README.md
client/: Cargo.toml
client/src/: config.rs  nix_config.rs  nix_netrc.rs  push.rs  version.rs
client/src/api/: mod.rs
client/src/command/: get_closure.rs  login.rs  push.rs  watch_store.rs
flake/: devshells.nix  distributor.nix  hercules-ci.nix  integration-tests.nix  nix-versions.nix  nixos.nix  overlays.nix  packages.nix
integration-tests/basic/: default.nix
nixos/: atticd.nix  cellerd.nix
server/: Cargo.toml
server/src/: config-template.toml  config.rs  error.rs  gc.rs  lib.rs  main.rs  middleware.rs  oobe.rs
server/src/access/: http.rs
token/: Cargo.toml
token/src/: lib.rs  tests.rs
(+12 files in other folders)
