[package]
name = "attic"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-stream = { version = "0.3.6", optional = true }
base64 = "0.22.1"
bytes = "1.10.1"
displaydoc = "0.2.5"
digest = "0.10.7"
ed25519-compact = "2.1.1"
fastcdc = "3.2.1"
futures = "0.3.31"
hex = "0.4.3"
lazy_static = "1.5.0"
nix-base32 = "0.2.0"
pin-project = "1.1.10"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.14.0"
sha2 = "0.10.9"
tempfile = "3"
wildmatch = "2.4.0"

[dependencies.tokio]
version = "1.46.1"
features = [
	"io-util",
	"macros",
	"sync",
	"fs",
	"process",
	"rt",
	"time",
]

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports", "async_tokio"] }
fastcdc = { version = "3.2.1", features = ["tokio"] }
serde_json = "1.0.140"

[features]
default = [
	"chunking",
	"io",
]

# Chunking.
chunking = ["io", "dep:async-stream"]

# IO utilities.
io = ["dep:async-stream"]

[[bench]]
name = "chunking"
harness = false
