[package]
name = "attic-token"
version.workspace = true
edition.workspace = true

[dependencies]
attic = { workspace = true, default-features = false }

base64.workspace = true
chrono.workspace = true
displaydoc.workspace = true
lazy_static.workspace = true
regex.workspace = true
rsa.workspace = true
serde.workspace = true
serde_with.workspace = true
tracing.workspace = true

indexmap = { version = "2.10.0", features = ["serde"] }
jwt-simple = { version = "0.12.14", default-features = false, features = ["pure-rust"] }
